@@ -2,6 +2,8 @@ package com.warehouse.controller;
 
 import com.warehouse.model.Transaction;
 import com.warehouse.model.TransactionDAO;
+import com.warehouse.model.PackItem;
+import com.warehouse.model.PackItemDAO;
 import com.warehouse.ui.SkeletonPane;
 import com.warehouse.ui.IconFactory;
 import javafx.collections.FXCollections;
@@ -11,6 +13,8 @@ import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.control.*;
+import javafx.scene.control.cell.PropertyValueFactory;
+import javafx.scene.layout.HBox;
 import javafx.scene.input.ClipboardContent;
 import javafx.scene.input.DragEvent;
 import javafx.scene.input.Dragboard;
@@ -20,7 +24,12 @@ import javafx.animation.PauseTransition;
 import javafx.util.Duration;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
+import java.time.LocalDateTime;
 import java.util.Locale;
+import java.util.List;
+import java.util.ArrayList;
+import java.util.Map;
+import java.util.HashMap;
 import java.util.concurrent.CompletableFuture;
 
 public class TransactionsController {
@@ -41,10 +50,19 @@ public class TransactionsController {
     @FXML private Button deleteButton;
     @FXML private Label errorLabel;
     @FXML private DatePicker reportDatePicker;
+    @FXML private DatePicker startDatePicker; // Optional - may not exist in FXML
+    @FXML private DatePicker endDatePicker; // Optional - may not exist in FXML
+    @FXML private Button generatePdfRangeButton; // Optional - may not exist in FXML
+    @FXML private Button exportCsvButton; // Optional - may not exist in FXML
+    @FXML private TextField searchField; // Optional - may not exist in FXML
+    @FXML private ComboBox<String> sortOrderComboBox; // Optional - may not exist in FXML
 
     @FXML private ComboBox<String> viewModeComboBox;
+    @FXML private HBox quickRangeButtonsContainer; // Optional - may not exist in FXML
+    @FXML private ToggleButton groupByDayToggle; // Optional - may not exist in FXML
 
     private final ObservableList<Transaction> transactionList = FXCollections.observableArrayList();
+    private boolean isGroupedView = false;
     private FilteredList<Transaction> filteredTransactions;
     private DashboardController dashboardController;
     private Transaction draggedTransaction;
@@ -57,14 +75,71 @@ public class TransactionsController {
 
     @FXML
     public void initialize() {
-        transactionTable.setFixedCellSize(56);
-        // Use flexible resize policy for dynamic column sizing
-        transactionTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_FLEX_LAST_COLUMN);
+        // Use variable row height for pack transactions (they need more space)
+        transactionTable.setFixedCellSize(-1); // -1 means variable row height
+        // Use a constrained resize policy. Some JavaFX versions (e.g., 8/11)
+        // don't have CONSTRAINED_RESIZE_POLICY_FLEX_LAST_COLUMN, which would
+        // crash controller initialization and prevent the Transactions UI from opening.
+        try {
+            // Prefer FLEX_LAST_COLUMN when available (newer JavaFX).
+            transactionTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY_FLEX_LAST_COLUMN);
+        } catch (NoSuchFieldError | Exception ignored) {
+            // Fallback for older JavaFX versions.
+            transactionTable.setColumnResizePolicy(TableView.CONSTRAINED_RESIZE_POLICY);
+        }
         
         dateColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(cellData.getValue().getDate().toString()));
-        mattressNameColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(
-            cellData.getValue().getMattressName() != null ? cellData.getValue().getMattressName() : "Inconnu"
-        ));
+        mattressNameColumn.setCellValueFactory(cellData -> {
+            Transaction t = cellData.getValue();
+            if (t == null) {
+                return new javafx.beans.property.SimpleStringProperty("Inconnu");
+            }
+            String type = t.getType() == null ? "" : t.getType().toLowerCase(Locale.ROOT);
+            if (type.startsWith("pack")) {
+                // For packs, show all items with size - reference format
+                List<PackItem> packItems = PackItemDAO.getPackItemsByTransactionId(t.getId());
+                if (packItems != null && !packItems.isEmpty()) {
+                    StringBuilder packDisplay = new StringBuilder();
+                    for (int i = 0; i < packItems.size(); i++) {
+                        PackItem item = packItems.get(i);
+                        if (i > 0) packDisplay.append("\n");
+                        packDisplay.append(item.getQuantity()).append("x ");
+                        if (item.getMattressName() != null) {
+                            packDisplay.append(item.getMattressName());
+                        } else {
+                            packDisplay.append("Matelas");
+                        }
+                    }
+                    return new javafx.beans.property.SimpleStringProperty(packDisplay.toString());
+                }
+                return new javafx.beans.property.SimpleStringProperty("Pack");
+            }
+            // For regular transactions, mattress_name already contains "size - reference" format from SQL
+            return new javafx.beans.property.SimpleStringProperty(
+                t.getMattressName() != null ? t.getMattressName() : "Inconnu"
+            );
+        });
+        
+        // Set cell factory for mattress column to handle multi-line text and centering
+        mattressNameColumn.setCellFactory(column -> new TableCell<Transaction, String>() {
+            @Override
+            protected void updateItem(String item, boolean empty) {
+                super.updateItem(item, empty);
+                if (empty || item == null) {
+                    setText(null);
+                    setGraphic(null);
+                    setStyle("");
+                } else {
+                    setText(item);
+                    // Center the text but not too much
+                    setAlignment(javafx.geometry.Pos.CENTER_LEFT);
+                    // Allow text wrapping for pack items
+                    setWrapText(true);
+                    // Add padding for better display
+                    setStyle("-fx-padding: 8 12; -fx-alignment: center-left;");
+                }
+            }
+        });
         quantityColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleIntegerProperty(cellData.getValue().getQuantity()).asObject());
         typeColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(cellData.getValue().getType()));
         typeColumn.setCellFactory(column -> new TableCell<Transaction, String>() {
@@ -92,6 +167,9 @@ public class TransactionsController {
                 } else if (lower.startsWith("réception") || lower.startsWith("reception") || lower.contains("reception")) {
                     setText("📥 Réception");
                     setStyle("-fx-text-fill: #27ae60; -fx-font-weight: bold;");
+                } else if (lower.startsWith("pack")) {
+                    setText("📦 Pack");
+                    setStyle("-fx-text-fill: #9b59b6; -fx-font-weight: bold;");
                 } else {
                     setText(item);
                     setStyle("");
@@ -109,7 +187,14 @@ public class TransactionsController {
                 if (empty || item == null) {
                     setText(null);
                 } else {
-                    setText(String.format("%.2f DT", item));
+                    Transaction t = getTableView().getItems().get(getIndex());
+                    if (t != null && t.getType() != null && t.getType().toLowerCase(Locale.ROOT).startsWith("pack")) {
+                        // For packs, show the total pack price (not per unit)
+                        setText(String.format("%.2f DT", item));
+                    } else {
+                        // For regular transactions, show unit price
+                        setText(String.format("%.2f DT", item));
+                    }
                 }
             }
         });
@@ -163,25 +248,82 @@ public class TransactionsController {
                 details.append("Réception de ")
                     .append(qty).append(" x ").append(mattress)
                     .append(" (stock augmenté)");
+            } else if (lowerType.startsWith("pack")) {
+                // For packs, show pack contents from pack_items table
+                List<PackItem> packItems = PackItemDAO.getPackItemsByTransactionId(t.getId());
+                if (packItems != null && !packItems.isEmpty()) {
+                    details.append("Pack: ");
+                    for (int i = 0; i < packItems.size(); i++) {
+                        PackItem item = packItems.get(i);
+                        if (i > 0) details.append(" + ");
+                        details.append(item.getQuantity())
+                               .append(" x ")
+                               .append(item.getMattressName() != null ? item.getMattressName() : "Matelas");
+                    }
+                    details.append(" (Total: ").append(String.format("%.2f DT", unitPrice)).append(")");
+                } else {
+                    details.append("Pack: ").append(mattress).append(" (Total: ").append(String.format("%.2f DT", unitPrice)).append(")");
+                }
             } else {
                 details.append(type).append(" - ")
                     .append(qty).append(" x ").append(mattress);
             }
 
             String notes = t.getNotes();
-            if (notes != null && !notes.isBlank()) {
+            if (notes != null && !notes.trim().isEmpty()) {
                 details.append(" – ").append(notes.trim());
             }
 
             return new javafx.beans.property.SimpleStringProperty(details.toString());
         });
+        
+        // Set cell factory for notes column to wrap text for pack transactions
+        notesColumn.setCellFactory(column -> new TableCell<Transaction, String>() {
+            @Override
+            protected void updateItem(String item, boolean empty) {
+                super.updateItem(item, empty);
+                if (empty || item == null) {
+                    setText(null);
+                    setGraphic(null);
+                    setStyle("");
+                } else {
+                    setText(item);
+                    setWrapText(true);
+                    setAlignment(javafx.geometry.Pos.CENTER_LEFT);
+                    setStyle("-fx-padding: 8 12; -fx-alignment: center-left;");
+                }
+            }
+        });
+        
         expectedReturnDateColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(
             cellData.getValue().getExpectedReturnDate() == null ? "" : cellData.getValue().getExpectedReturnDate().toString()
         ));
-        totalPriceColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(
-            String.format("%.2f DT", cellData.getValue().getPrix() * cellData.getValue().getQuantity())
-        ));
+        totalPriceColumn.setCellValueFactory(cellData -> {
+            Transaction t = cellData.getValue();
+            if (t == null) {
+                return new javafx.beans.property.SimpleStringProperty("");
+            }
+            String type = t.getType() == null ? "" : t.getType().toLowerCase(Locale.ROOT);
+            double totalPrice;
+            if (type.startsWith("pack")) {
+                // For packs, prix already contains the total pack price (not per unit)
+                totalPrice = t.getPrix();
+            } else {
+                // For regular transactions, calculate: unit price * quantity
+                totalPrice = t.getPrix() * t.getQuantity();
+            }
+            return new javafx.beans.property.SimpleStringProperty(String.format("%.2f DT", totalPrice));
+        });
+        // Set column alignment for better display
         dateColumn.setStyle("-fx-alignment: CENTER;");
+        mattressNameColumn.setStyle("-fx-alignment: CENTER-LEFT;");
+        quantityColumn.setStyle("-fx-alignment: CENTER;");
+        typeColumn.setStyle("-fx-alignment: CENTER;");
+        prixColumn.setStyle("-fx-alignment: CENTER;");
+        totalPriceColumn.setStyle("-fx-alignment: CENTER;");
+        storeOwnerNameColumn.setStyle("-fx-alignment: CENTER-LEFT;");
+        notesColumn.setStyle("-fx-alignment: CENTER-LEFT;");
+        expectedReturnDateColumn.setStyle("-fx-alignment: CENTER;");
         mattressNameColumn.setStyle("-fx-alignment: CENTER-LEFT;");
         quantityColumn.setStyle("-fx-alignment: CENTER;");
         typeColumn.setStyle("-fx-alignment: CENTER;");
@@ -219,8 +361,57 @@ public class TransactionsController {
         filteredTransactions = new FilteredList<>(transactionList, t -> true);
         transactionTable.setItems(filteredTransactions);
 
-        setupViewModeComboBox();
-        setupAddMatressColumn();
+        try {
+            setupViewModeComboBox();
+            setupAddMatressColumn();
+            setupDateRangeFilters();
+            setupQuickRanges();
+            setupSearchAndSort();
+            setupGroupByDayToggle();
+        } catch (Exception e) {
+            System.err.println("Error setting up optional transaction features: " + e.getMessage());
+            e.printStackTrace();
+            // Continue initialization even if optional features fail
+        }
+        
+        // Set row factory to make pack transactions taller
+        transactionTable.setRowFactory(tv -> {
+            TableRow<Transaction> row = new TableRow<Transaction>() {
+                @Override
+                protected void updateItem(Transaction item, boolean empty) {
+                    super.updateItem(item, empty);
+                    if (empty || item == null) {
+                        setPrefHeight(-1);
+                        setStyle("");
+                    } else {
+                        String type = item.getType() == null ? "" : item.getType().toLowerCase(Locale.ROOT);
+                        if (type.startsWith("pack")) {
+                            // Make pack rows taller to accommodate multiple items
+                            List<PackItem> packItems = PackItemDAO.getPackItemsByTransactionId(item.getId());
+                            int itemCount = packItems != null ? packItems.size() : 1;
+                            // Base height 56px, add ~35px per additional item
+                            double height = 56 + (itemCount > 1 ? (itemCount - 1) * 35 : 0);
+                            setPrefHeight(height);
+                            setMinHeight(height);
+                            setMaxHeight(height);
+                        } else {
+                            setPrefHeight(-1); // Use default height
+                            setMinHeight(-1);
+                            setMaxHeight(-1);
+                        }
+                    }
+                }
+            };
+            return row;
+        });
+        
+        // Add selection listener to show relevant columns when transaction is clicked
+        transactionTable.getSelectionModel().selectedItemProperty().addListener((obs, oldSelection, newSelection) -> {
+            if (newSelection != null) {
+                updateColumnsForTransactionType(newSelection);
+            }
+        });
+        
         if (TransactionDAO.isSortOrderSupported()) {
             enableRowReordering();
         } else {
@@ -228,12 +419,66 @@ public class TransactionsController {
         }
         loadTransactions();
     }
+    
+    /**
+     * Update column visibility based on selected transaction type
+     */
+    private void updateColumnsForTransactionType(Transaction transaction) {
+        if (transaction == null || transaction.getType() == null) {
+            return;
+        }
+        
+        String type = transaction.getType().toLowerCase(Locale.ROOT).trim();
+        
+        if (type.startsWith("vente") || type.startsWith("pack")) {
+            // For sales and packs: show price columns, hide owner and return date
+            storeOwnerNameColumn.setVisible(false);
+            expectedReturnDateColumn.setVisible(false);
+            prixColumn.setVisible(true);
+            totalPriceColumn.setVisible(true);
+        } else if (type.startsWith("prêt") || type.startsWith("pret")) {
+            // For loans: show owner and return date, hide price columns
+            storeOwnerNameColumn.setVisible(true);
+            expectedReturnDateColumn.setVisible(true);
+            prixColumn.setVisible(false);
+            totalPriceColumn.setVisible(false);
+        } else if (type.startsWith("transfert")) {
+            // For transfers: show owner, hide return date and price columns
+            storeOwnerNameColumn.setVisible(true);
+            expectedReturnDateColumn.setVisible(false);
+            prixColumn.setVisible(false);
+            totalPriceColumn.setVisible(false);
+        } else if (type.startsWith("retour") || type.startsWith("réception") || type.startsWith("reception")) {
+            // For returns/receptions: show return date if applicable, hide price columns
+            storeOwnerNameColumn.setVisible(true);
+            expectedReturnDateColumn.setVisible(true);
+            prixColumn.setVisible(false);
+            totalPriceColumn.setVisible(false);
+        } else {
+            // Default: show all columns
+            storeOwnerNameColumn.setVisible(true);
+            expectedReturnDateColumn.setVisible(true);
+            prixColumn.setVisible(true);
+            totalPriceColumn.setVisible(true);
+        }
+        
+        // Auto-resize columns after visibility changes
+        Platform.runLater(() -> {
+            PauseTransition pause = new PauseTransition(Duration.millis(100));
+            pause.setOnFinished(e -> autoResizeColumns());
+            pause.play();
+        });
+    }
 
     @FXML
     public void loadTransactions() {
         showSkeleton(true);
         CompletableFuture
-            .supplyAsync(TransactionDAO::getAllTransactions)
+            .supplyAsync(() -> {
+                List<Transaction> transactions = TransactionDAO.getAllTransactions();
+                // Pack transactions should NOT be expanded - show as single rows
+                return transactions;
+            })
             .thenAccept(list -> Platform.runLater(() -> {
                 transactionList.setAll(list);
                 System.out.println("[TransactionsController] Transactions chargées: " + transactionList.size());
@@ -278,6 +523,7 @@ public class TransactionsController {
         viewModeComboBox.setItems(FXCollections.observableArrayList(
             "Toutes les transactions",
             "Ventes",
+            "Packs",
             "Prêts",
             "Transferts",
             "Retours / Réceptions"
@@ -291,7 +537,7 @@ public class TransactionsController {
             return;
         }
         String mode = viewModeComboBox != null ? viewModeComboBox.getValue() : "Toutes les transactions";
-        if (mode == null || mode.isBlank() || "Toutes les transactions".equals(mode)) {
+        if (mode == null || mode.trim().isEmpty() || "Toutes les transactions".equals(mode)) {
             filteredTransactions.setPredicate(t -> true);
             // Show all columns when viewing all transactions
             storeOwnerNameColumn.setVisible(true);
@@ -301,6 +547,13 @@ public class TransactionsController {
         } else if ("Ventes".equals(mode)) {
             filteredTransactions.setPredicate(t -> isTransactionType(t, "vente"));
             // For sales: show price columns, hide owner and return date
+            storeOwnerNameColumn.setVisible(false);
+            expectedReturnDateColumn.setVisible(false);
+            prixColumn.setVisible(true);
+            totalPriceColumn.setVisible(true);
+        } else if ("Packs".equals(mode)) {
+            filteredTransactions.setPredicate(t -> isTransactionType(t, "pack"));
+            // For packs: show price columns, hide owner and return date
             storeOwnerNameColumn.setVisible(false);
             expectedReturnDateColumn.setVisible(false);
             prixColumn.setVisible(true);
@@ -341,6 +594,11 @@ public class TransactionsController {
             pause.setOnFinished(e -> autoResizeColumns());
             pause.play();
         });
+        
+        // Reapply grouping if enabled
+        if (isGroupedView) {
+            applyGrouping();
+        }
     }
     
     /**
@@ -362,6 +620,8 @@ public class TransactionsController {
             return transactionType.startsWith("retour") || transactionType.contains("retour");
         } else if (searchType.equals("reception") || searchType.equals("réception")) {
             return transactionType.startsWith("réception") || transactionType.startsWith("reception") || transactionType.contains("reception");
+        } else if (searchType.equals("pack")) {
+            return transactionType.startsWith("pack") || transactionType.equalsIgnoreCase("pack");
         }
         return transactionType.contains(searchType);
     }
@@ -464,7 +724,7 @@ public class TransactionsController {
             }
             
             String notes = t.getNotes();
-            if (notes != null && !notes.isBlank()) {
+            if (notes != null && !notes.trim().isEmpty()) {
                 details.append(" – ").append(notes.trim());
             }
             
@@ -492,8 +752,17 @@ public class TransactionsController {
                 dashboardController.showOverlay(overlayRoot);
             }
         } catch (Exception e) {
-            e.printStackTrace();
-            errorLabel.setText("Erreur lors de l'ouverture du dialogue d'ajout.");
+            com.warehouse.util.ErrorHandler.handleError(
+                "TransactionsController.handleAdd",
+                e,
+                () -> {
+                    String userMessage = com.warehouse.util.ErrorHandler.getUserFriendlyMessage(e);
+                    errorLabel.setText("Erreur lors de l'ouverture du dialogue d'ajout: " + userMessage);
+                    if (dashboardController != null) {
+                        dashboardController.showNotification("Impossible d'ouvrir l'ajout: " + userMessage, true);
+                    }
+                }
+            );
         }
     }
 
@@ -511,15 +780,616 @@ public class TransactionsController {
                 return;
             }
             String filename = "rapport_transactions_" + selectedDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + ".pdf";
-            boolean success = com.warehouse.util.PdfReportUtil.generateDailyTransactionsReport(selectedDate, filename);
-            if (success) {
+            String filePath = com.warehouse.util.PdfReportUtil.generateDailyTransactionsReport(selectedDate, filename);
+            if (filePath != null) {
                 errorLabel.setText("Rapport PDF généré avec succès: " + filename);
+                // Open PDF and folder automatically
+                String desktopPath = System.getProperty("user.home") + java.io.File.separator + "Desktop" + java.io.File.separator + "LES RAPPORT QUOTIDIEN";
+                com.warehouse.util.PdfReportUtil.openPdfFile(filePath);
+                com.warehouse.util.PdfReportUtil.openFolder(desktopPath);
             } else {
                 errorLabel.setText("Échec de la génération du rapport PDF.");
             }
         } catch (Exception e) {
             e.printStackTrace();
             errorLabel.setText("Erreur lors de la génération du rapport PDF.");
+        }
+    }
+    
+    @FXML
+    private void handlePdfRangeReport() {
+        try {
+            LocalDate startDate = startDatePicker.getValue();
+            LocalDate endDate = endDatePicker.getValue();
+            
+            if (startDate == null || endDate == null) {
+                errorLabel.setText("Veuillez sélectionner une date de début et une date de fin.");
+                return;
+            }
+            
+            if (startDate.isAfter(endDate)) {
+                errorLabel.setText("La date de début doit être antérieure à la date de fin.");
+                return;
+            }
+            
+            String filename = "transactions_" + startDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + 
+                            "_to_" + endDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + ".pdf";
+            String filePath = com.warehouse.util.PdfReportUtil.generateDateRangeTransactionsReport(startDate, endDate, filename);
+            
+            if (filePath != null) {
+                errorLabel.setText("Rapport PDF généré avec succès: " + filename);
+                String desktopPath = System.getProperty("user.home") + java.io.File.separator + "Desktop" + 
+                                    java.io.File.separator + "RAPPORT DE TRANSACTION";
+                com.warehouse.util.PdfReportUtil.openPdfFile(filePath);
+                com.warehouse.util.PdfReportUtil.openFolder(desktopPath);
+                if (dashboardController != null) {
+                    dashboardController.showNotification("Rapport PDF généré avec succès!", false);
+                }
+            } else {
+                errorLabel.setText("Échec de la génération du rapport PDF.");
+                if (dashboardController != null) {
+                    dashboardController.showNotification("Échec de la génération du rapport PDF.", true);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            errorLabel.setText("Erreur lors de la génération du rapport PDF: " + e.getMessage());
+            if (dashboardController != null) {
+                dashboardController.showNotification("Erreur lors de la génération du rapport PDF.", true);
+            }
+        }
+    }
+    
+    @FXML
+    private void handleExportCsv() {
+        try {
+            LocalDate startDate = startDatePicker != null && startDatePicker.getValue() != null 
+                ? startDatePicker.getValue() 
+                : LocalDate.now().minusMonths(1);
+            LocalDate endDate = endDatePicker != null && endDatePicker.getValue() != null 
+                ? endDatePicker.getValue() 
+                : LocalDate.now();
+            
+            String filename = "transactions_" + startDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + 
+                            "_to_" + endDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd")) + ".csv";
+            String filePath = com.warehouse.util.CsvExportUtil.exportTransactionsToCsv(
+                filteredTransactions != null ? filteredTransactions : transactionList,
+                startDate, endDate, filename
+            );
+            
+            if (filePath != null) {
+                errorLabel.setText("Export CSV réussi: " + filename);
+                String desktopPath = System.getProperty("user.home") + java.io.File.separator + "Desktop" + 
+                                    java.io.File.separator + "RAPPORT DE TRANSACTION";
+                com.warehouse.util.PdfReportUtil.openFolder(desktopPath);
+                if (dashboardController != null) {
+                    dashboardController.showNotification("Export CSV réussi!", false);
+                }
+            } else {
+                errorLabel.setText("Échec de l'export CSV.");
+                if (dashboardController != null) {
+                    dashboardController.showNotification("Échec de l'export CSV.", true);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            errorLabel.setText("Erreur lors de l'export CSV: " + e.getMessage());
+            if (dashboardController != null) {
+                dashboardController.showNotification("Erreur lors de l'export CSV.", true);
+            }
+        }
+    }
+    
+    private void setupDateRangeFilters() {
+        // Set default dates (last 30 days)
+        if (startDatePicker != null) {
+            startDatePicker.setValue(LocalDate.now().minusDays(30));
+        }
+        if (endDatePicker != null) {
+            endDatePicker.setValue(LocalDate.now());
+        }
+        
+        // Apply filter when dates change
+        if (startDatePicker != null) {
+            startDatePicker.valueProperty().addListener((obs, oldVal, newVal) -> applyDateRangeFilter());
+        }
+        if (endDatePicker != null) {
+            endDatePicker.valueProperty().addListener((obs, oldVal, newVal) -> applyDateRangeFilter());
+        }
+    }
+    
+    private void setupQuickRanges() {
+        if (quickRangeButtonsContainer == null) {
+            return;
+        }
+        
+        // Create quick range buttons
+        Button todayBtn = new Button("Aujourd'hui");
+        Button yesterdayBtn = new Button("Hier");
+        Button last7DaysBtn = new Button("7 derniers jours");
+        Button thisMonthBtn = new Button("Ce mois");
+        Button lastMonthBtn = new Button("Mois dernier");
+        Button customBtn = new Button("Personnalisé");
+        
+        // Style the buttons
+        String buttonStyle = "-fx-padding: 6 12; -fx-font-size: 12px;";
+        todayBtn.setStyle(buttonStyle);
+        yesterdayBtn.setStyle(buttonStyle);
+        last7DaysBtn.setStyle(buttonStyle);
+        thisMonthBtn.setStyle(buttonStyle);
+        lastMonthBtn.setStyle(buttonStyle);
+        customBtn.setStyle(buttonStyle);
+        
+        // Set up button actions
+        todayBtn.setOnAction(e -> handleQuickRange("today"));
+        yesterdayBtn.setOnAction(e -> handleQuickRange("yesterday"));
+        last7DaysBtn.setOnAction(e -> handleQuickRange("last7days"));
+        thisMonthBtn.setOnAction(e -> handleQuickRange("thismonth"));
+        lastMonthBtn.setOnAction(e -> handleQuickRange("lastmonth"));
+        customBtn.setOnAction(e -> {
+            // Custom: just ensure date pickers are visible and focused
+            if (startDatePicker != null) {
+                startDatePicker.requestFocus();
+            }
+        });
+        
+        // Add buttons to container
+        quickRangeButtonsContainer.getChildren().addAll(
+            todayBtn, yesterdayBtn, last7DaysBtn, thisMonthBtn, lastMonthBtn, customBtn
+        );
+        quickRangeButtonsContainer.setSpacing(8);
+    }
+    
+    // Individual handler methods for FXML if needed
+    @FXML
+    private void handleQuickRangeToday() {
+        handleQuickRange("today");
+    }
+    
+    @FXML
+    private void handleQuickRangeYesterday() {
+        handleQuickRange("yesterday");
+    }
+    
+    @FXML
+    private void handleQuickRangeLast7Days() {
+        handleQuickRange("last7days");
+    }
+    
+    @FXML
+    private void handleQuickRangeThisMonth() {
+        handleQuickRange("thismonth");
+    }
+    
+    @FXML
+    private void handleQuickRangeLastMonth() {
+        handleQuickRange("lastmonth");
+    }
+    
+    private void setupSearchAndSort() {
+        // Setup search field
+        if (searchField != null) {
+            searchField.textProperty().addListener((obs, oldVal, newVal) -> applySearchFilter());
+        }
+        
+        // Setup sort order
+        if (sortOrderComboBox != null) {
+            sortOrderComboBox.setItems(FXCollections.observableArrayList(
+                "Date (croissant)",
+                "Date (décroissant)",
+                "Montant (croissant)",
+                "Montant (décroissant)",
+                "Type"
+            ));
+            sortOrderComboBox.getSelectionModel().selectFirst();
+            sortOrderComboBox.valueProperty().addListener((obs, oldVal, newVal) -> applySortOrder());
+        }
+    }
+    
+    private void setupGroupByDayToggle() {
+        if (groupByDayToggle != null) {
+            groupByDayToggle.setText("Grouper par jour");
+            groupByDayToggle.selectedProperty().addListener((obs, oldVal, newVal) -> {
+                isGroupedView = newVal;
+                applyGrouping();
+            });
+        }
+    }
+    
+    /**
+     * Apply grouping by day if enabled, otherwise show regular view
+     */
+    private void applyGrouping() {
+        if (!isGroupedView || filteredTransactions == null) {
+            transactionTable.setItems(filteredTransactions);
+            updateDateColumnForGrouping(); // Reset to normal view
+            return;
+        }
+        
+        // Group transactions by day
+        Map<LocalDate, List<Transaction>> grouped = new HashMap<>();
+        for (Transaction t : filteredTransactions) {
+            LocalDate day = t.getDate().toLocalDate();
+            grouped.computeIfAbsent(day, k -> new ArrayList<>()).add(t);
+        }
+        
+        // Create a sorted list of days
+        List<LocalDate> sortedDays = new ArrayList<>(grouped.keySet());
+        sortedDays.sort(LocalDate::compareTo);
+        
+        // Create grouped display items
+        ObservableList<Transaction> groupedList = FXCollections.observableArrayList();
+        for (LocalDate day : sortedDays) {
+            List<Transaction> dayTransactions = grouped.get(day);
+            // Sort transactions within the day by time
+            dayTransactions.sort((t1, t2) -> t1.getDate().compareTo(t2.getDate()));
+            
+            // Add all transactions for this day
+            groupedList.addAll(dayTransactions);
+        }
+        
+        transactionTable.setItems(groupedList);
+        
+        // Update cell factory to show day headers and totals
+        updateDateColumnForGrouping();
+        updateTotalPriceColumnForGrouping(grouped);
+    }
+    
+    /**
+     * Update total price column to show daily totals when grouping is enabled
+     */
+    private void updateTotalPriceColumnForGrouping(Map<LocalDate, List<Transaction>> grouped) {
+        if (!isGroupedView || grouped == null) {
+            return;
+        }
+        
+        // Store daily totals for display
+        Map<LocalDate, Double> dailyTotals = new HashMap<>();
+        for (Map.Entry<LocalDate, List<Transaction>> entry : grouped.entrySet()) {
+            double dayTotal = 0.0;
+            for (Transaction t : entry.getValue()) {
+                String type = t.getType() != null ? t.getType().toLowerCase(Locale.ROOT) : "";
+                if (type.startsWith("pack")) {
+                    dayTotal += t.getPrix(); // Pack price is already total
+                } else if (type.startsWith("vente")) {
+                    dayTotal += t.getPrix() * t.getQuantity();
+                }
+            }
+            dailyTotals.put(entry.getKey(), dayTotal);
+        }
+        
+        // Update cell factory to show totals on first row of each day
+        totalPriceColumn.setCellFactory(column -> new TableCell<Transaction, String>() {
+            private LocalDate currentDay = null;
+            
+            @Override
+            protected void updateItem(String item, boolean empty) {
+                super.updateItem(item, empty);
+                if (empty || item == null) {
+                    setText(null);
+                    setStyle("");
+                    currentDay = null;
+                } else {
+                    Transaction t = getTableView().getItems().get(getIndex());
+                    if (t != null) {
+                        LocalDate transactionDay = t.getDate().toLocalDate();
+                        
+                        // Check if this is the first transaction of the day
+                        boolean isFirstOfDay = false;
+                        if (currentDay == null || !currentDay.equals(transactionDay)) {
+                            currentDay = transactionDay;
+                            
+                            // Check if previous row is different day
+                            if (getIndex() > 0) {
+                                Transaction prevT = getTableView().getItems().get(getIndex() - 1);
+                                if (prevT != null) {
+                                    LocalDate prevDay = prevT.getDate().toLocalDate();
+                                    isFirstOfDay = !prevDay.equals(transactionDay);
+                                }
+                            } else {
+                                isFirstOfDay = true;
+                            }
+                        }
+                        
+                        if (isFirstOfDay && dailyTotals.containsKey(transactionDay)) {
+                            // Show daily total on first row
+                            double dayTotal = dailyTotals.get(transactionDay);
+                            setText("Total jour: " + String.format("%.2f DT", dayTotal));
+                            setStyle("-fx-font-weight: bold; -fx-text-fill: #2980b9;");
+                        } else {
+                            // Show transaction total
+                            String type = t.getType() != null ? t.getType().toLowerCase(Locale.ROOT) : "";
+                            double totalPrice;
+                            if (type.startsWith("pack")) {
+                                totalPrice = t.getPrix();
+                            } else {
+                                totalPrice = t.getPrix() * t.getQuantity();
+                            }
+                            setText(String.format("%.2f DT", totalPrice));
+                            setStyle("");
+                        }
+                    } else {
+                        setText(item);
+                        setStyle("");
+                    }
+                }
+            }
+        });
+    }
+    
+    /**
+     * Update date column to show day headers when grouping is enabled
+     */
+    private void updateDateColumnForGrouping() {
+        if (isGroupedView) {
+            dateColumn.setCellFactory(column -> new TableCell<Transaction, String>() {
+                private LocalDate currentDay = null;
+                
+                @Override
+                protected void updateItem(String item, boolean empty) {
+                    super.updateItem(item, empty);
+                    if (empty || item == null) {
+                        setText(null);
+                        setStyle("");
+                        currentDay = null;
+                    } else {
+                        Transaction t = getTableView().getItems().get(getIndex());
+                        if (t != null) {
+                            LocalDate transactionDay = t.getDate().toLocalDate();
+                            
+                            // Check if this is the first transaction of the day
+                            boolean isFirstOfDay = false;
+                            if (currentDay == null || !currentDay.equals(transactionDay)) {
+                                isFirstOfDay = true;
+                                currentDay = transactionDay;
+                                
+                                // Check if previous row is different day
+                                if (getIndex() > 0) {
+                                    Transaction prevT = getTableView().getItems().get(getIndex() - 1);
+                                    if (prevT != null) {
+                                        LocalDate prevDay = prevT.getDate().toLocalDate();
+                                        isFirstOfDay = !prevDay.equals(transactionDay);
+                                    }
+                                } else {
+                                    isFirstOfDay = true;
+                                }
+                            }
+                            
+                            if (isFirstOfDay) {
+                                // Show day header
+                                setText("📅 " + transactionDay.format(DateTimeFormatter.ofPattern("yyyy-MM-dd (EEEE)", Locale.FRENCH)));
+                                setStyle("-fx-font-weight: bold; -fx-background-color: #e8f4f8; -fx-padding: 8;");
+                            } else {
+                                // Show time only
+                                setText(t.getDate().format(DateTimeFormatter.ofPattern("HH:mm:ss")));
+                                setStyle("");
+                            }
+                        } else {
+                            setText(item);
+                            setStyle("");
+                        }
+                    }
+                }
+            });
+        } else {
+            // Reset to normal date display
+            dateColumn.setCellValueFactory(cellData -> new javafx.beans.property.SimpleStringProperty(cellData.getValue().getDate().toString()));
+            dateColumn.setCellFactory(null);
+            
+            // Reset total price column to normal display
+            totalPriceColumn.setCellValueFactory(cellData -> {
+                Transaction t = cellData.getValue();
+                if (t == null) {
+                    return new javafx.beans.property.SimpleStringProperty("");
+                }
+                String type = t.getType() != null ? t.getType().toLowerCase(Locale.ROOT) : "";
+                double totalPrice;
+                if (type.startsWith("pack")) {
+                    totalPrice = t.getPrix();
+                } else {
+                    totalPrice = t.getPrix() * t.getQuantity();
+                }
+                return new javafx.beans.property.SimpleStringProperty(String.format("%.2f DT", totalPrice));
+            });
+            totalPriceColumn.setCellFactory(null);
+        }
+    }
+    
+    private void applyDateRangeFilter() {
+        if (filteredTransactions == null) {
+            return;
+        }
+        
+        LocalDate startDate = startDatePicker != null ? startDatePicker.getValue() : null;
+        LocalDate endDate = endDatePicker != null ? endDatePicker.getValue() : null;
+        
+        if (startDate == null && endDate == null) {
+            // No date filter, just apply view mode filter
+            applyViewModeFilter();
+            return;
+        }
+        
+        filteredTransactions.setPredicate(t -> {
+            if (t == null) return false;
+            
+            LocalDateTime transactionDateTime = t.getDate();
+            
+            // Apply date range (inclusive: startDate 00:00:00 to endDate 23:59:59)
+            if (startDate != null) {
+                LocalDateTime startDateTime = startDate.atStartOfDay(); // 00:00:00
+                if (transactionDateTime.isBefore(startDateTime)) {
+                    return false;
+                }
+            }
+            if (endDate != null) {
+                LocalDateTime endDateTime = endDate.atTime(23, 59, 59); // 23:59:59
+                if (transactionDateTime.isAfter(endDateTime)) {
+                    return false;
+                }
+            }
+            
+            // Apply view mode filter
+            String mode = viewModeComboBox != null ? viewModeComboBox.getValue() : "Toutes les transactions";
+            if (mode == null || mode.trim().isEmpty() || "Toutes les transactions".equals(mode)) {
+                return true;
+            } else if ("Ventes".equals(mode)) {
+                return isTransactionType(t, "vente");
+            } else if ("Packs".equals(mode)) {
+                return isTransactionType(t, "pack");
+            } else if ("Prêts".equals(mode)) {
+                return isTransactionType(t, "pret") || isTransactionType(t, "prêt");
+            } else if ("Transferts".equals(mode)) {
+                return isTransactionType(t, "transfert");
+            } else if ("Retours / Réceptions".equals(mode)) {
+                return isTransactionType(t, "retour") || isTransactionType(t, "reception") || isTransactionType(t, "réception");
+            }
+            
+            return true;
+        });
+        
+        // Reapply grouping if enabled
+        if (isGroupedView) {
+            applyGrouping();
+        }
+    }
+    
+    private void applySearchFilter() {
+        if (filteredTransactions == null || searchField == null) {
+            return;
+        }
+        
+        String searchText = searchField.getText();
+        if (searchText == null || searchText.trim().isEmpty()) {
+            applyDateRangeFilter(); // Just apply date range
+            return;
+        }
+        
+        String searchLower = searchText.toLowerCase(Locale.ROOT).trim();
+        
+        filteredTransactions.setPredicate(t -> {
+            if (t == null) return false;
+            
+            // Search in mattress name
+            if (t.getMattressName() != null && t.getMattressName().toLowerCase(Locale.ROOT).contains(searchLower)) {
+                return true;
+            }
+            
+            // Search in transaction ID
+            if (String.valueOf(t.getId()).contains(searchText)) {
+                return true;
+            }
+            
+            // Search in notes
+            if (t.getNotes() != null && t.getNotes().toLowerCase(Locale.ROOT).contains(searchLower)) {
+                return true;
+            }
+            
+            // Search in type
+            if (t.getType() != null && t.getType().toLowerCase(Locale.ROOT).contains(searchLower)) {
+                return true;
+            }
+            
+            return false;
+        });
+        
+        // Reapply grouping if enabled
+        if (isGroupedView) {
+            applyGrouping();
+        }
+    }
+    
+    private void applySortOrder() {
+        if (sortOrderComboBox == null || transactionTable == null) {
+            return;
+        }
+        
+        // If grouping is enabled, sorting is handled within groups
+        if (isGroupedView) {
+            applyGrouping(); // Reapply grouping which sorts by date
+            return;
+        }
+        
+        String sortOrder = sortOrderComboBox.getValue();
+        if (sortOrder == null) {
+            return;
+        }
+        
+        ObservableList<Transaction> items = transactionTable.getItems();
+        if (items == null) {
+            return;
+        }
+        
+        javafx.collections.transformation.SortedList<Transaction> sortedList = 
+            new javafx.collections.transformation.SortedList<>(items);
+        
+        switch (sortOrder) {
+            case "Date (croissant)":
+                sortedList.setComparator((t1, t2) -> t1.getDate().compareTo(t2.getDate()));
+                break;
+            case "Date (décroissant)":
+                sortedList.setComparator((t1, t2) -> t2.getDate().compareTo(t1.getDate()));
+                break;
+            case "Montant (croissant)":
+                sortedList.setComparator((t1, t2) -> {
+                    double total1 = t1.getPrix() * t1.getQuantity();
+                    double total2 = t2.getPrix() * t2.getQuantity();
+                    return Double.compare(total1, total2);
+                });
+                break;
+            case "Montant (décroissant)":
+                sortedList.setComparator((t1, t2) -> {
+                    double total1 = t1.getPrix() * t1.getQuantity();
+                    double total2 = t2.getPrix() * t2.getQuantity();
+                    return Double.compare(total2, total1);
+                });
+                break;
+            case "Type":
+                sortedList.setComparator((t1, t2) -> {
+                    String type1 = t1.getType() != null ? t1.getType() : "";
+                    String type2 = t2.getType() != null ? t2.getType() : "";
+                    return type1.compareToIgnoreCase(type2);
+                });
+                break;
+        }
+        
+        transactionTable.setItems(sortedList);
+    }
+    
+    @FXML
+    private void handleQuickRange(String range) {
+        LocalDate today = LocalDate.now();
+        LocalDate start, end = today;
+        
+        switch (range) {
+            case "today":
+                start = today;
+                end = today;
+                break;
+            case "yesterday":
+                start = today.minusDays(1);
+                end = today.minusDays(1);
+                break;
+            case "last7days":
+                start = today.minusDays(7);
+                end = today;
+                break;
+            case "thismonth":
+                start = today.withDayOfMonth(1);
+                end = today;
+                break;
+            case "lastmonth":
+                start = today.minusMonths(1).withDayOfMonth(1);
+                end = today.minusMonths(1).withDayOfMonth(today.minusMonths(1).lengthOfMonth());
+                break;
+            default:
+                return;
+        }
+        
+        if (startDatePicker != null) {
+            startDatePicker.setValue(start);
+        }
+        if (endDatePicker != null) {
+            endDatePicker.setValue(end);
         }
     }
 
@@ -684,5 +1554,50 @@ public class TransactionsController {
         }
     }
 
+    /**
+     * Expand pack transactions into multiple rows (one per pack item)
+     */
+    private List<Transaction> expandPackTransactions(List<Transaction> transactions) {
+        List<Transaction> expanded = new ArrayList<>();
+        for (Transaction transaction : transactions) {
+            if ("Pack".equalsIgnoreCase(transaction.getType())) {
+                // Get pack items for this transaction
+                List<PackItem> packItems = PackItemDAO.getPackItemsByTransactionId(transaction.getId());
+                if (packItems != null && !packItems.isEmpty()) {
+                    // Create a transaction row for each pack item
+                    for (int i = 0; i < packItems.size(); i++) {
+                        PackItem item = packItems.get(i);
+                        // For price display: show full pack price in first row, 0 in others (to avoid double counting)
+                        double displayPrice = (i == 0) ? transaction.getPrix() : 0.0;
+                        
+                        Transaction itemTransaction = new Transaction(
+                            transaction.getId(), // Keep same ID to group them
+                            transaction.getDate(),
+                            item.getMattressId(),
+                            item.getQuantity(),
+                            "Pack", // Keep pack type
+                            transaction.getStoreOwnerId(),
+                            transaction.getUserId(),
+                            displayPrice, // Show full pack price only in first row
+                            transaction.getNotes(), // Keep original notes
+                            transaction.getExpectedReturnDate(),
+                            transaction.getSortOrder(),
+                            item.getMattressName(), // Use mattress name from pack item
+                            transaction.getStoreOwnerName()
+                        );
+                        expanded.add(itemTransaction);
+                    }
+                } else {
+                    // No pack items found, just add the transaction as-is
+                    expanded.add(transaction);
+                }
+            } else {
+                // Regular transaction, add as-is
+                expanded.add(transaction);
+            }
+        }
+        return expanded;
+    }
+    
     // Removed bindColumnWidths - now using auto-resize
 } 
